2011-01-26  Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk

	* operation/agentes/status_monitor.php: fixed the ACL in the Module name for
	the select box in the filter.

	* operation/search_agents.php: fixed the ACL in the search of agent.

2011-01-24  Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk
	
	* include/pChart/pChart.class: fixed in the function "drawTextBox" when
	pass a empty $Text as empty array.

2011-01-24  Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk
	
	* operation/search_agents.php: fixed the pagination in the global search
	result.
	
2011-01-24  Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk
	
	* include/javascript/pandora.js, operation/agentes/exportdata.php,
	operation/agentes/ver_agente.php,
	godmode/reporting/visual_console_builder.wizard.php,
	godmode/reporting/visual_console_builder.editor.js,
	godmode/reporting/visual_console_builder.elements.php: fixed to show by ajax
	the disabled modules and the disabled agents.
	
	Fixes: #3155701

2011-01-21  Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk
	
	* godmode/reporting/visual_console_builder.elements.php: fixed the show
	disabled modules in the list of element tab of the visual console editor.
	
	Fixes: #3155701

2011-01-21  Miguel de Dios  <miguel.dedios@artica.es>

	* ChangeLog: added lost lines.
	
2011-01-21  Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk
	
	* operation/agentes/status_monitor.php: fixed and optimized the extract the
	list of Module name for the select box in the filter.

2011-01-21  Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk
	
	* operation/agentes/estado_generalagente.php: fixed when the agent haven't
	ip address.
	
	Fixes: #3162646

2011-01-21  Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk
	
	* godmode/agentes/module_manager.php: added to call to enterprise functions